# CudaPP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
allocators/: device_allocator.h  managed_allocator.h  pinned_allocator.h
arrays/: array3d.h  cuda_array.h  mipmapped_array.h  mipmapped_texture_object.h  surface_object.h  surface_view.h  texture_object.h  texture_view.h
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
exceptions/: cuda_exception.h
functions/: kernel_launchers.h
include/cudapp/: CMakeLists.txt
include/cudapp/allocators/: CMakeLists.txt  managed_allocator.h  pinned_allocator.h
include/cudapp/arrays/: CMakeLists.txt  cuda_array.h  mipmapped_array.h  mipmapped_texture_object.h  surface_object.h  surface_view.h  texture_object.h  texture_view.h
include/cudapp/exceptions/: CMakeLists.txt  cuda_exception.h
include/cudapp/functions/: CMakeLists.txt  configurators.h  kernel_launchers.h  stream_managment.h
include/cudapp/managment/: CMakeLists.txt  device_managment.h  event_managment.h  stream_managment.h
include/cudapp/mathematics/: CMakeLists.txt  vector_type_traits.h
include/cudapp/memory/: CMakeLists.txt  functions.h
include/cudapp/memory/allocators/: CMakeLists.txt  device_allocator.h  managed_allocator.h  pinned_allocator.h
include/cudapp/utilities/: CMakeLists.txt  capture_wrapper.h  device_managment.h  ide_helpers.h  macros.h  memory_helpers.h  special_registers.cuh  type_helpers.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test_main.cpp
test/cudapp/: CMakeLists.txt
test/cudapp/allocators/: CMakeLists.txt  device_allocator.cpp  device_allocator.cu  managed_allocator.cu
test/cudapp_test/: CMakeLists.txt  testing_helpers.h
test/cudapp_test/allocators/: CMakeLists.txt  device_allocator.cu  managed_allocator.cu
test/cudapp_test/functions/: CMakeLists.txt  kernel_launchers.cu
test_application/: CMakeLists.txt  main.cpp  smid_test.cu
utilities/: ide_helpers.h  memory_helpers.h
vector_types/: vector_type_traits.h
